--- a/houston-common-lib/package.json
+++ b/houston-common-lib/package.json
@@ -20,15 +20,15 @@
 	"scripts": {
 		"build": "tsc --noEmit && vite build",
 		"test": "vitest run",
-		"test:watch": "vitest"
+		"test:watch": "vitest",
+		"docs:lib": "typedoc --out ../docs"
 	},
 	"devDependencies": {
+		"typedoc": "^0.25.13",
+		"typedoc-umlclass": "^0.9.0",
 		"typescript": "~5.4.0",
 		"vite-plugin-dts": "^1.5.0",
 		"vitest": "^0.23.4"
-	},
-	"typedoc": {
-		"entryPoint": "./lib/index.ts"
 	},
 	"dependencies": {
 		"@thames/monads": "^0.6.2",
