--- a/houston-common-lib/tsconfig.json
+++ b/houston-common-lib/tsconfig.json
@@ -31,6 +31,7 @@
 		"experimentalDecorators": true,
 		"downlevelIteration": true,
 		"declaration": true,
+		"declarationMap": true,
 		"pretty": true,
 		"allowJs": true,
 		"checkJs": false,
