--- a/package.json
+++ b/package.json
@@ -2,7 +2,14 @@
     "name": "@45drives/houston-common",
     "version": "1.0.0",
     "private": true,
+    "scripts": {
+        "docs": "typedoc"
+    },
     "workspaces": [
         "houston-common-*"
-    ]
+    ],
+    "devDependencies": {
+        "typedoc": "^0.25.13",
+        "typedoc-umlclass": "^0.9.0"
+    }
 }
