--- a/package.json
+++ b/package.json
@@ -11,5 +11,6 @@
     "devDependencies": {
         "typedoc": "^0.25.13",
         "typedoc-umlclass": "^0.9.0"
-    }
+    },
+    "packageManager": "yarn@3.8.1"
 }
