--- a/.github/workflows/publish-docs.yaml
+++ b/.github/workflows/publish-docs.yaml
@@ -29,6 +29,7 @@ jobs:
       run:  git checkout -b gh-pages
     - name: Generate autodocs
       run:  |
+        yarn set version stable
         yarn
         yarn docs
     - id: "upload-documentation"
