--- a/.github/workflows/publish-docs.yaml
+++ b/.github/workflows/publish-docs.yaml
@@ -30,7 +30,7 @@ jobs:
     - name: Generate autodocs
       run:  |
         yarn set version stable
-        yarn install --immutable
+        yarn install --no-lockfile
         yarn docs
     - id: "upload-documentation"
       name: "Upload Pages artifact"
