--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     ],
     "devDependencies": {
         "typedoc": "^0.25.13",
+        "typedoc-plugin-mdn-links": "^3.1.23",
         "typedoc-umlclass": "^0.9.0",
         "typescript": "^5.4.5"
     }
