--- a/package.json
+++ b/package.json
@@ -13,5 +13,6 @@
         "typedoc-plugin-mdn-links": "^3.1.23",
         "typedoc-umlclass": "^0.9.0",
         "typescript": "^5.4.5"
-    }
+    },
+    "packageManager": "yarn@4.1.1"
 }
