hopefully fix deps for doc generation take 2

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@ yarn-error.log
 dist/
 out/
 build/
-.yarn/
 docs/
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 .pnp.*
