--- a/houston-common-lib/package.json
+++ b/houston-common-lib/package.json
@@ -18,7 +18,7 @@
 	},
 	"types": "dist/index.d.ts",
 	"scripts": {
-		"build": "tsc --noEmit && vite build",
+		"build:lib": "tsc --noEmit && vite build",
 		"test": "vitest run",
 		"test:watch": "vitest",
 		"docs": "typedoc --out ../docs"
