--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "version": "1.0.0",
     "private": true,
     "scripts": {
-        "docs": "typedoc"
+        "docs": "yarn build:ui && yarn typedoc",
+        "build": "yarn build:lib && yarn build:ui"
     },
     "workspaces": [
         "houston-common-*"
@@ -11,6 +12,7 @@
     "devDependencies": {
         "typedoc": "^0.25.13",
         "typedoc-plugin-mdn-links": "^3.1.23",
+        "typedoc-plugin-vue": "^1.1.0",
         "typedoc-umlclass": "^0.9.0",
         "typescript": "^5.4.5"
     },
