user and group querying

--- a/houston-common-lib/tsconfig.json
+++ b/houston-common-lib/tsconfig.json
@@ -35,6 +35,7 @@
 		"pretty": true,
 		"allowJs": true,
 		"checkJs": false,
+		"noUncheckedIndexedAccess": true,
 		"baseUrl": ".",
 		"paths": {
 			"@/*": [
