explicitly build css

--- a/houston-common-ui/package.json
+++ b/houston-common-ui/package.json
@@ -16,7 +16,7 @@
     "build:ui": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "test:unit": "vitest",
-    "build-only": "yarn build:css && vite build",
+    "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write lib/"
