--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
     "version": "1.0.0",
     "private": true,
     "scripts": {
-        "docs:common": "yarn build:ui && yarn typedoc",
+        "docs:common": "yarn build:css && yarn build:ui && yarn typedoc",
         "docs": "yarn docs:common",
-        "build:common": "yarn build:lib && yarn build:ui",
+        "build:common": "yarn build:css && yarn build:lib && yarn build:ui",
         "build": "yarn build:common"
     },
     "workspaces": [
