--- a/houston-common-ui/package.json
+++ b/houston-common-ui/package.json
@@ -28,6 +28,7 @@
     "vue": "^3.4.21"
   },
   "devDependencies": {
+    "@fontsource/red-hat-text": "^5.0.18",
     "@heroicons/vue": "^2.1.3",
     "@rushstack/eslint-patch": "^1.8.0",
     "@tailwindcss/forms": "^0.5.7",
