parsing + utility functors

--- a/houston-common-lib/tsconfig.json
+++ b/houston-common-lib/tsconfig.json
@@ -33,7 +33,7 @@
 		"declaration": true,
 		"declarationMap": true,
 		"pretty": true,
-		"allowJs": true,
+		"allowJs": false,
 		"checkJs": false,
 		"noUncheckedIndexedAccess": true,
 		"baseUrl": ".",
