--- a/houston-common-lib/package.json
+++ b/houston-common-lib/package.json
@@ -6,9 +6,6 @@
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
-	"files": [
-		"./dist"
-	],
 	"main": "./dist/index.js",
 	"exports": {
 		".": {
@@ -19,7 +16,7 @@
 	"types": "dist/index.d.ts",
 	"scripts": {
 		"build:lib": "tsc --noEmit && vite build",
-		"test": "vitest run",
+		"test:lib": "vitest run",
 		"test:watch": "vitest",
 		"docs": "typedoc --out ../docs"
 	},
@@ -29,7 +26,7 @@
 		"typedoc-umlclass": "^0.9.0",
 		"typescript": "~5.4.0",
 		"vite-plugin-dts": "^1.5.0",
-		"vitest": "^0.23.4"
+		"vitest": "^1.6.0"
 	},
 	"dependencies": {
 		"@thames/monads": "^0.6.2",
