--- a/houston-common-ui/package.json
+++ b/houston-common-ui/package.json
@@ -35,6 +35,7 @@
     "@rushstack/eslint-patch": "^1.8.0",
     "@tailwindcss/forms": "^0.5.7",
     "@tsconfig/node20": "^20.1.4",
+    "@types/deep-equal": "^1.0.4",
     "@types/jsdom": "^21.1.6",
     "@types/node": "^20.12.5",
     "@vitejs/plugin-vue": "^5.0.4",
