testing for scheduler

--- a/houston-common-lib/package.json
+++ b/houston-common-lib/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@45drives/houston-common-lib",
+	"name": "houston-common-lib",
 	"description": "Houston library",
 	"author": "45Drives",
 	"license": "GPL-3.0",
