--- a/houston-common-css/package.json
+++ b/houston-common-css/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@45drives/houston-common-css",
+	"name": "houston-common-css",
 	"version": "0.1.12",
 	"description": "Global CSS file for cockpit plugins",
 	"main": "dist/index.css",
