--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@45drives/houston-common",
+    "name": "houston-common",
     "version": "1.0.0",
     "private": true,
     "scripts": {
