--- a/houston-common-lib/package.json
+++ b/houston-common-lib/package.json
@@ -13,7 +13,7 @@
 			"require": "./dist/index.cjs"
 		}
 	},
-	"types": "dist/index.d.ts",
+	"types": "dist/lib/index.d.ts",
 	"scripts": {
 		"build:lib": "tsc --noEmit && vite build",
 		"test:lib": "vitest run",
@@ -22,15 +22,15 @@
 	},
 	"devDependencies": {
 		"typedoc": "^0.25.13",
-		"typedoc-plugin-mdn-links": "^3.1.23",
+		"typedoc-plugin-mdn-links": "^3.1.25",
 		"typedoc-umlclass": "^0.9.0",
-		"typescript": "~5.4.0",
-		"vite-plugin-dts": "^1.5.0",
+		"typescript": "~5.4.5",
+		"vite-plugin-dts": "^3.9.1",
 		"vitest": "^1.6.0"
 	},
 	"dependencies": {
 		"monet": "^0.9.3",
 		"neverthrow": "^6.2.1",
-		"vite": "^3.1.3"
+		"vite": "^5.2.11"
 	}
 }
