--- a/houston-common-lib/package.json
+++ b/houston-common-lib/package.json
@@ -10,7 +10,8 @@
 	"exports": {
 		".": {
 			"import": "./dist/index.js",
-			"require": "./dist/index.cjs"
+			"require": "./dist/index.cjs",
+			"types": "./dist/lib/index.d.ts"
 		}
 	},
 	"types": "dist/lib/index.d.ts",
