--- a/houston-common-ui/package.json
+++ b/houston-common-ui/package.json
@@ -25,13 +25,14 @@
   "dependencies": {
     "@45drives/houston-common-css": "workspace:^",
     "@45drives/houston-common-lib": "workspace:^",
+    "@headlessui/vue": "^1.7.22",
+    "@heroicons/vue": "^2.1.3",
     "deep-equal": "^2.2.3",
     "neverthrow": "^6.2.1",
     "vue": "^3.4.27"
   },
   "devDependencies": {
     "@fontsource/red-hat-text": "^5.0.18",
-    "@heroicons/vue": "^2.1.3",
     "@rushstack/eslint-patch": "^1.10.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tsconfig/node20": "^20.1.4",
