--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "devDependencies": {
         "typedoc": "^0.25.13",
         "typedoc-plugin-mdn-links": "^3.1.25",
+        "typedoc-plugin-missing-exports": "^2.2.0",
         "typedoc-plugin-vue": "^1.1.0",
         "typedoc-umlclass": "^0.9.0",
         "typescript": "^5.4.5"
