add makefile for recursive make

--- a/houston-common-lib/package.json
+++ b/houston-common-lib/package.json
@@ -16,6 +16,7 @@
 	"types": "dist/index.d.ts",
 	"scripts": {
 		"build:lib": "tsc --noEmit && vite build",
+		"build": "tsc --noEmit && vite build",
 		"test:lib": "vitest run",
 		"test:watch": "vitest",
 		"docs": "typedoc --out ../docs"
