add "build" script for lib and ui for use by makefile

--- a/houston-common-lib/package.json
+++ b/houston-common-lib/package.json
@@ -17,6 +17,7 @@
 	"types": "dist/lib/index.d.ts",
 	"scripts": {
 		"build:lib": "tsc --noEmit && vite build",
+		"build": "tsc --noEmit && vite build",
 		"test:lib": "vitest run",
 		"test:watch": "vitest",
 		"docs": "typedoc --out ../docs"
