--- a/houston-common-ui/package.json
+++ b/houston-common-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "houston-common-ui",
+  "name": "@45drives/houston-common-ui",
   "version": "1.0.0",
   "private": true,
   "type": "module",
@@ -24,41 +24,42 @@
     "format": "prettier --write lib/"
   },
   "dependencies": {
+    "@45drives/houston-common-css": "workspace:^",
+    "@45drives/houston-common-lib": "workspace:^",
+    "@headlessui/vue": "^1.7.22",
+    "@heroicons/vue": "^2.1.3",
     "deep-equal": "^2.2.3",
-    "houston-common-css": "workspace:^",
-    "houston-common-lib": "workspace:^",
     "neverthrow": "^6.2.1",
     "vue": "^3.4.27"
   },
   "devDependencies": {
     "@fontsource/red-hat-text": "^5.0.18",
-    "@heroicons/vue": "^2.1.3",
-    "@rushstack/eslint-patch": "^1.8.0",
+    "@rushstack/eslint-patch": "^1.10.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tsconfig/node20": "^20.1.4",
     "@types/deep-equal": "^1.0.4",
     "@types/jsdom": "^21.1.6",
-    "@types/node": "^20.12.5",
+    "@types/node": "^20.12.12",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
-    "@vue/test-utils": "^2.4.5",
+    "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.5.1",
     "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-plugin-vue": "^9.23.0",
+    "eslint": "^9.2.0",
+    "eslint-plugin-vue": "^9.26.0",
     "jsdom": "^24.0.0",
     "npm-run-all2": "^6.1.2",
     "postcss": "^8.4.38",
     "postcss-modules": "^6.0.0",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.3",
-    "typescript": "~5.4.0",
-    "vite": "^5.2.8",
-    "vite-plugin-dts": "^3.9.0",
-    "vite-plugin-vue-devtools": "^7.0.25",
-    "vitest": "^1.4.0",
-    "vue-tsc": "^2.0.11"
+    "typescript": "~5.4.5",
+    "vite": "^5.2.11",
+    "vite-plugin-dts": "^3.9.1",
+    "vite-plugin-vue-devtools": "^7.2.0",
+    "vitest": "^1.6.0",
+    "vue-tsc": "^2.0.19"
   }
 }
