--- a/houston-common-ui/package.json
+++ b/houston-common-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@45drives/houston-common-ui",
+  "name": "houston-common-ui",
   "version": "1.0.0",
   "private": true,
   "type": "module",
@@ -24,8 +24,8 @@
     "format": "prettier --write lib/"
   },
   "dependencies": {
-    "@45drives/houston-common-css": "workspace:^",
-    "@45drives/houston-common-lib": "workspace:^",
+    "houston-common-css": "workspace:^",
+    "houston-common-lib": "workspace:^",
     "@headlessui/vue": "^1.7.22",
     "@heroicons/vue": "^2.1.3",
     "deep-equal": "^2.2.3",
