--- a/houston-common-ui/package.json
+++ b/houston-common-ui/package.json
@@ -30,6 +30,7 @@
     "@heroicons/vue": "^2.1.3",
     "deep-equal": "^2.2.3",
     "neverthrow": "^6.2.1",
+    "uuid": "^9.0.1",
     "vue": "^3.4.27"
   },
   "devDependencies": {
@@ -40,6 +41,7 @@
     "@types/deep-equal": "^1.0.4",
     "@types/jsdom": "^21.1.6",
     "@types/node": "^20.12.12",
+    "@types/uuid": "^9",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/eslint-config-prettier": "^9.0.0",
