add test make target

--- a/houston-common-lib/package.json
+++ b/houston-common-lib/package.json
@@ -19,6 +19,7 @@
 		"build:lib": "tsc --noEmit && vite build",
 		"build": "tsc --noEmit && vite build",
 		"test:lib": "vitest run",
+		"test": "vitest run",
 		"test:watch": "vitest",
 		"docs": "typedoc --out ../docs"
 	},
