--- a/houston-common-ui/package.json
+++ b/houston-common-ui/package.json
@@ -31,7 +31,9 @@
     "deep-equal": "^2.2.3",
     "neverthrow": "^6.2.1",
     "uuid": "^9.0.1",
-    "vue": "^3.4.27"
+    "vue": "^3.4.27",
+    "zod": "^3.23.8",
+    "zod-validation-error": "^3.3.0"
   },
   "devDependencies": {
     "@fontsource/red-hat-text": "^5.0.18",
