--- a/houston-common-lib/package.json
+++ b/houston-common-lib/package.json
@@ -9,9 +9,9 @@
 	"main": "./dist/index.js",
 	"exports": {
 		".": {
+			"types": "./dist/lib/index.d.ts",
 			"import": "./dist/index.js",
-			"require": "./dist/index.cjs",
-			"types": "./dist/lib/index.d.ts"
+			"require": "./dist/index.cjs"
 		}
 	},
 	"types": "dist/lib/index.d.ts",
@@ -35,6 +35,6 @@
 	"dependencies": {
 		"monet": "^0.9.3",
 		"neverthrow": "^6.2.1",
-		"vite": "^5.2.11"
+		"vite": "^6.0.11"
 	}
 }
