--- a/houston-common-ui/package.json
+++ b/houston-common-ui/package.json
@@ -6,10 +6,11 @@
   "main": "dist/index.js",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
       "require": "./dist/index.cjs"
     },
-    "./style.css": "./dist/style.css"
+    "./style.css": "./dist/index.css"
   },
   "types": "dist/index.d.ts",
   "scripts": {
@@ -31,7 +32,7 @@
     "deep-equal": "^2.2.3",
     "neverthrow": "^6.2.1",
     "uuid": "^9.0.1",
-    "vue": "^3.4.27",
+    "vue": "^3.5.13",
     "zod": "^3.23.8",
     "zod-validation-error": "^3.3.0"
   },
@@ -45,26 +46,25 @@
     "@types/node": "^20.12.12",
     "@types/p5": "^1.7.6",
     "@types/uuid": "^9",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "@vitejs/plugin-vue": "^5.2.1",
     "@vue/eslint-config-prettier": "^9.0.0",
-    "@vue/eslint-config-typescript": "^13.0.0",
+    "@vue/eslint-config-typescript": "^14.3.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.5.1",
     "autoprefixer": "^10.4.19",
-    "eslint": "^9.2.0",
-    "eslint-plugin-vue": "^9.26.0",
+    "eslint": "^9.19.0",
+    "eslint-plugin-vue": "^9.32.0",
     "jsdom": "^24.0.0",
     "npm-run-all2": "^6.1.2",
-    "p5": "^1.4.1",
+    "pixijs": "^7.1.4",
     "postcss": "^8.4.38",
     "postcss-modules": "^6.0.0",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.3",
     "typescript": "~5.4.5",
-    "vite": "^5.2.11",
+    "vite": "^6.0.11",
     "vite-plugin-dts": "^3.9.1",
-    "vite-plugin-vue-devtools": "^7.2.0",
+    "vite-plugin-vue-devtools": "^7.7.1",
     "vitest": "^1.6.0",
     "vue-tsc": "^2.0.19"
   }
