--- a/houston-common-ui/package.json
+++ b/houston-common-ui/package.json
@@ -31,6 +31,7 @@
     "@heroicons/vue": "^2.1.3",
     "deep-equal": "^2.2.3",
     "neverthrow": "^6.2.1",
+    "three": "^0.173.0",
     "uuid": "^9.0.1",
     "vue": "^3.5.13",
     "zod": "^3.23.8",
@@ -45,6 +46,7 @@
     "@types/jsdom": "^21.1.6",
     "@types/node": "^20.12.12",
     "@types/p5": "^1.7.6",
+    "@types/three": "^0.173.0",
     "@types/uuid": "^9",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/eslint-config-prettier": "^9.0.0",
