--- a/houston-common-lib/package.json
+++ b/houston-common-lib/package.json
@@ -24,6 +24,7 @@
 		"docs": "typedoc --out ../docs"
 	},
 	"devDependencies": {
+		"@types/node": "^22.13.4",
 		"@types/node-localstorage": "^1.3.3",
 		"node-localstorage": "^3.0.5",
 		"prettier": "^3.3.1",
