--- a/houston-common-lib/tsconfig.json
+++ b/houston-common-lib/tsconfig.json
@@ -44,7 +44,10 @@
 			"../typings/*": [
 				"./typings/*"
 			]
-		}
+		},
+		"types": [
+			"node"
+		]
 	},
 	"include": [
 		"typings/**/*.d.ts",
