--- a/houston-common-ui/package.json
+++ b/houston-common-ui/package.json
@@ -30,7 +30,7 @@
     "@headlessui/vue": "^1.7.22",
     "@heroicons/vue": "^2.1.3",
     "deep-equal": "^2.2.3",
-    "neverthrow": "^6.2.1",
+    "neverthrow": "6.2.2",
     "three": "^0.173.0",
     "uuid": "^9.0.1",
     "vue": "^3.5.13",
