--- a/houston-common-ui/package.json
+++ b/houston-common-ui/package.json
@@ -25,8 +25,8 @@
     "format": "prettier --write lib/"
   },
   "dependencies": {
-    "@45drives/houston-common-css": "workspace:^",
-    "@45drives/houston-common-lib": "workspace:^",
+    "@45drives/houston-common-css": "file:../houston-common-css",
+    "@45drives/houston-common-lib": "file:../houston-common-lib",
     "@headlessui/vue": "^1.7.22",
     "@heroicons/vue": "^2.1.3",
     "deep-equal": "^2.2.3",
