--- a/houston-common-lib/package.json
+++ b/houston-common-lib/package.json
@@ -14,6 +14,13 @@
 			"require": "./dist/index.cjs"
 		}
 	},
+	"build": {
+		"files": [
+			"**/*",
+			"!**/*.test.js",
+			"!**/*.spec.js"
+		]
+	},
 	"types": "dist/lib/index.d.ts",
 	"scripts": {
 		"build:lib": "tsc --noEmit && vite build",
