--- a/houston-common-lib/package.json
+++ b/houston-common-lib/package.json
@@ -27,7 +27,7 @@
 		"@types/node": "^22.13.4",
 		"@types/node-localstorage": "^1.3.3",
 		"node-localstorage": "^3.0.5",
-		"prettier": "^3.3.1",
+		"prettier": "^3.5.3",
 		"typedoc": "^0.27.6",
 		"typedoc-plugin-mdn-links": "^4.0.10",
 		"typedoc-umlclass": "^0.10.1",
@@ -38,6 +38,6 @@
 	"dependencies": {
 		"monet": "^0.9.3",
 		"neverthrow": "^6.2.1",
-		"vite": "^6.0.11"
+		"vite": "5"
 	}
 }
