--- a/houston-common-ui/package.json
+++ b/houston-common-ui/package.json
@@ -54,16 +54,16 @@
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.5.1",
     "autoprefixer": "^10.4.19",
-    "eslint": "^9.19.0",
+    "eslint": "8",
     "eslint-plugin-vue": "^9.32.0",
     "jsdom": "^24.0.0",
     "npm-run-all2": "^6.1.2",
     "postcss": "^8.4.38",
     "postcss-modules": "^6.0.0",
-    "prettier": "^3.2.5",
+    "prettier": "^3.5.3",
     "tailwindcss": "^3.4.3",
     "typescript": "~5.4.5",
-    "vite": "^6.0.11",
+    "vite": "5",
     "vite-plugin-dts": "^3.9.1",
     "vite-plugin-vue-devtools": "^7.7.1",
     "vitest": "^1.6.0",
