--- a/houston-common-lib/package.json
+++ b/houston-common-lib/package.json
@@ -17,7 +17,9 @@
 	"build": {
 		"files": [
 			"**/*",
+			"!**/*.test.ts",
 			"!**/*.test.js",
+			"!**/*.spec.ts",
 			"!**/*.spec.js"
 		]
 	},
