--- a/houston-common-lib/tsconfig.json
+++ b/houston-common-lib/tsconfig.json
@@ -57,7 +57,7 @@
 		"dist",
 		"node_modules",
 		"tests",
-    "lib/**/*.test.ts",
-    "lib/**/*.spec.ts"
+    "**/*.test.ts",
+    "**/*.spec.ts"
 	]
 }
