--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
         "typedoc-plugin-missing-exports": "^3.1.0",
         "typedoc-plugin-vue": "^1.3.0",
         "typedoc-umlclass": "^0.10.1",
-        "typescript": "^5.4.5"
+        "typescript": "^5.4.5",
+        "@45drives/houston-common-css": "workspace:^",
+        "@45drives/houston-common-lib": "workspace:^",
+        "@45drives/houston-common-ui": "workspace:^"
     },
     "packageManager": "yarn@4.6.0",
     "dependencies": {
