--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "typescript": "^5.4.5",
         "@45drives/houston-common-css": "workspace:^",
         "@45drives/houston-common-lib": "workspace:^",
-        "@45drives/houston-common-ui": "workspace:^"
+        "@45drives/houston-common-ui": "workspace:^",
+        "vue":  "^3.5.13"
     },
     "packageManager": "yarn@4.6.0",
     "dependencies": {
