--- a/package.json
+++ b/package.json
@@ -23,8 +23,5 @@
         "typescript": "^5.4.5",
         "vue": "^3.5.13"
     },
-    "packageManager": "yarn@4.6.0",
-    "dependencies": {
-        "p5": "^1.11.3"
-    }
+    "packageManager": "yarn@4.6.0"
 }
