updated smb confs

--- a/houston-common-lib/lib/defaultconfigs/Storinator-Q30-Turbo/smb.conf
+++ b/houston-common-lib/lib/defaultconfigs/Storinator-Q30-Turbo/smb.conf
@@ -5,7 +5,6 @@
     path = /tank
     read only = no
     browseable = no
-    read only = no
     guest ok = no
-    force user = %U
-    valid users = %U
+    directory mask = 0770
+    create mask = 0770
