--- a/houston-common-lib/tsconfig.json
+++ b/houston-common-lib/tsconfig.json
@@ -51,7 +51,9 @@
 		"typings/**/*.d.ts",
 		"lib/**/*.ts",
 		"lib/**/*.d.ts",
-		"lib/**/*.js"
+		"lib/**/*.js",
+		"lib/defaultconfigs/**/smb.conf",
+		"lib/defaultconfigs/**/zfs.json",
 	],
 	"exclude": [
 		"dist",
