--- a/houston-common-lib/lib/defaultconfigs/Professional_PRO15/smb.conf
+++ b/houston-common-lib/lib/defaultconfigs/Professional_PRO15/smb.conf
@@ -2,13 +2,10 @@
 
 
 [backups]
-   path = /tank/backups
-   read only = no
-   browseable = yes
-   guest ok = no
-   valid users = @smbusers
-   force group = smbusers
-   create mask = 0700
-   directory mask = 0700
-   inherit permissions = no
-   inherit acls = no
+path = /tank/backup
+    read only = no
+    browseable = no
+    guest ok = no
+  directory mask = 2770
+create mask = 0770
+force group = smbusers
