--- a/houston-common-lib/lib/defaultconfigs/Storinator-F8X1-Enhanced-S/smb.conf
+++ b/houston-common-lib/lib/defaultconfigs/Storinator-F8X1-Enhanced-S/smb.conf
@@ -6,5 +6,6 @@
     read only = no
     browseable = no
     guest ok = no
-    directory mask = 0770
-    create mask = 0770
+  directory mask = 2770
+create mask = 0770
+force group = smbusers
