--- a/houston-common-ui/package.json
+++ b/houston-common-ui/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@45drives/houston-common-css": "file:../houston-common-css",
     "@45drives/houston-common-lib": "file:../houston-common-lib",
+    "@floating-ui/dom": "^1.7.2",
     "@headlessui/vue": "^1.7.22",
     "@heroicons/vue": "^2.1.3",
     "deep-equal": "^2.2.3",
