--- a/houston-common-ui/package.json
+++ b/houston-common-ui/package.json
@@ -10,7 +10,7 @@
       "import": "./dist/index.js",
       "require": "./dist/index.cjs"
     },
-    "./style.css": "./dist/style.css"
+    "./style.css": "./dist/index.css"
   },
   "types": "dist/index.d.ts",
   "scripts": {
@@ -66,7 +66,7 @@
     "prettier": "^3.5.3",
     "tailwindcss": "^3.4.3",
     "typescript": "~5.4.5",
-    "vite": "5",
+    "vite": "6",
     "vite-plugin-dts": "^3.9.1",
     "vite-plugin-vue-devtools": "^7.7.1",
     "vitest": "^1.6.0",
