--- a/houston-common-ui/tsconfig.app.json
+++ b/houston-common-ui/tsconfig.app.json
@@ -1,6 +1,6 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "include": ["env.d.ts", "lib/**/*", "lib/**/*.vue", "typings/**/*.d.ts"],
+  "include": ["env.d.ts", "lib/**/*", "lib/**/*.vue", "typings/**/*.d.ts", "../../super-simple-setup/src/composables/useThemeFromAlias.ts"],
   "exclude": ["lib/**/__tests__/*"],
   "compilerOptions": {
     "composite": true,
